# language-engineer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  main.py  pyproject.toml
configs/: lora_config.yaml
notebooks/: colab_train_eval.ipynb  datasets.ipynb
results/: eval_results.json
scripts/: evaluate.py  hub.py  inference.py  metrics.py  prepare_datasets.py  process_datasets.py  strategies.py  train.py  utils.py
